--- a/.env.dev
+++ b/.env.dev
@@ -48,12 +48,15 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=587
-MAIL_USERNAME=a244f95a0b70b1
-MAIL_PASSWORD=a273cc5487fda7
+MAIL_HOST=smtp.gmail.com
+#MAIL_HOST=sandbox.smtp.mailtrap.io
+#MAIL_USERNAME=a244f95a0b70b1
+#MAIL_PASSWORD=a273cc5487fda7
+MAIL_USERNAME="santhiveeran311@gmail.com"
+MAIL_PASSWORD="Kamaraj@123"
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="santhiveerapandi@gmail.com"
+MAIL_FROM_ADDRESS="santhiveeran311@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
