--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,11 @@
         "php": "^8.2",
         "laravel/framework": "^11.0",
         "laravel/pulse": "^1.1",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "predis/predis": "^2.2"
+        "php-open-source-saver/jwt-auth": "^2.3",
+        "predis/predis": "^2.2",
+        "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
